export interface Vehicle {
  drive(): void;
  doBreak(): void;
  getInfo(): string;
  getPrice(): number;
}
